--- a/HumanitarianApp.Api/client/package.json
+++ b/HumanitarianApp.Api/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "humanitarian",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
+    "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
