--- a/HumanitarianApp.Api/appsettings.json
+++ b/HumanitarianApp.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HumanitarianConnection": "Data Source=PF2X9FM6\\SQLEXPRESS; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
