--- a/HumanitarianApp.Api/client/package.json
+++ b/HumanitarianApp.Api/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.4"
   },
