added file logging and middleware exception

--- a/HumanitarianApp.Api/appsettings.json
+++ b/HumanitarianApp.Api/appsettings.json
@@ -6,7 +6,23 @@
     }
   },
   "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "ConnectionStrings": {
-    "HumanitarianConnection": "Data Source=PF2X9FM6\\SQLEXPRESS; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "HumanitarianConnection": "Data Source=L8N0CX05Z18835A\\SQLEXPRESS; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
