--- a/HumanitarianApp.Api/appsettings.json
+++ b/HumanitarianApp.Api/appsettings.json
@@ -26,6 +26,6 @@
     ]
   },
   "ConnectionStrings": {
-    "HumanitarianConnection": "Data Source=L8N0CX05Z18835A\\SQLEXPRESS; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "HumanitarianConnection": "Data Source=DESKTOP-77U0930; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
