--- a/HumanitarianApp.Api/client/package.json
+++ b/HumanitarianApp.Api/client/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha-v3": "^1.9.7",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
