--- a/HumanitarianApp.Api/client/package.json
+++ b/HumanitarianApp.Api/client/package.json
@@ -11,6 +11,7 @@
     "react-google-recaptcha-v3": "^1.9.7",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
