added sqllite instead of sqlserver

--- a/HumanitarianApp.Api/appsettings.json
+++ b/HumanitarianApp.Api/appsettings.json
@@ -26,6 +26,7 @@
     ]
   },
   "ConnectionStrings": {
-    "HumanitarianConnection": "Data Source=DESKTOP-HRDTMA9; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "HumanitarianConnection": "Data Source=Humanitarian.sqlite"
+    //"HumanitarianConnection": "Data Source=DESKTOP-HRDTMA9; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
