--- a/HumanitarianApp.Api/HumanitarianApp.Api.csproj
+++ b/HumanitarianApp.Api/HumanitarianApp.Api.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\HumanitarianApp.BLL\HumanitarianApp.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
