--- a/HumanitarianApp.Api/appsettings.json
+++ b/HumanitarianApp.Api/appsettings.json
@@ -28,5 +28,8 @@
   "ConnectionStrings": {
     "HumanitarianConnection": "Data Source=Humanitarian.sqlite"
     //"HumanitarianConnection": "Data Source=DESKTOP-HRDTMA9; Database=HumanitarianDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
+  "ApiAddress": {
+    "PortAddress": "https://localhost:7057"
+  } 
 }
