--- a/HumanitarianApp.Api/client/package.json
+++ b/HumanitarianApp.Api/client/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-recaptcha-v3": "^1.9.7",
@@ -15,7 +20,7 @@
     "react-toastify": "^8.2.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.5",
-    "styled-normalize": "^8.0.7",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
