change tsconfig file add base url, d.ts to include and exclude key

--- a/HumanitarianApp.Api/client/tsconfig.json
+++ b/HumanitarianApp.Api/client/tsconfig.json
@@ -9,8 +9,14 @@
     "skipLibCheck": true,
     "jsx": "react",
     "allowJs": true,
+    "baseUrl": "./src"
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "react-app.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
